crates/plotnik-tests/tests/03-analyze/predicates/regex_boundary_half_variant.txt
Q = (identifier =~ /\b{start-half}x/)
------------------ DIAGNOSTICS -------------------
error: this word-boundary variant has no shared equivalent across target engines
 --> query.ptk:1:21
  |
1 | Q = (identifier =~ /\b{start-half}x/)
  |                     ^^^^^^^^^^^^^^
  |
help: use `\b` or `\B`, which Plotnik defines as ASCII word boundaries on every target
------------------ DEFINITIONS -------------------
